fixed navbar, set location section vertically aligned

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -14,3 +14,7 @@ nav {
     top: 0;
     z-index: 1100;
  }
+
+ .sidenav {
+  z-index: 1200;
+ }
